# pyspark-data-lab

./: .gitignore  README.md  main.py  pyproject.toml
app/: domain.py
app/bronze/: bronze.py
app/bronze/clientes/: clientes.csv  clientes.json
app/gold/: gold.py
app/silver/: silver.py
bronze/: bronze.py
bronze/compras/: compras.csv  compras.json
gold/: gold.py
silver/: silver.py
