[project]
name = "pyspark-data-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "hallan-n",email = "hallanneves01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark==4.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

